cmake_minimum_required(VERSION 3.29)
project(CS505)

set(CMAKE_CXX_STANDARD 20)

add_executable(CS505
        #        lectures/1_Pointers/example1.cpp
        #        lectures/1_Pointers/example2.cpp
        #        sections/1_pointers/example3.cpp
        #        lectures/2_struct_class/class_pointer.cpp
        #        lectures/2_struct_class/template_class.cpp
        #        lectures/2_struct_class/calculator.cpp
        #        lectures/3_linked_list/List.h
        #        lectures/3_linked_list/List.cpp
        #        lectures/3_linked_list/main.cpp
        labs/2_array/student/student.cpp
        labs/2_array/student/student.h
        labs/2_array/student/main.cpp
)
