cmake_minimum_required(VERSION 3.29)
project(CS505)

set(CMAKE_CXX_STANDARD 20)

add_executable(CS505
        #        lectures/1_Pointers/example1.cpp
        #        lectures/1_Pointers/example2.cpp
        #        sections/1_pointers/example3.cpp
        #        lectures/2_struct_class/class_pointer.cpp
        #        lectures/2_struct_class/template_class.cpp
        #        lectures/2_struct_class/calculator.cpp
        #        lectures/3_linked_list/List.h
        #        lectures/3_linked_list/List.cpp
        #        lectures/3_linked_list/main.cpp
        #        labs/2_array/student/student.cpp
        #        labs/2_array/student/student.h
        #        labs/2_array/student/main.cpp
        #        assignments/1_linked_list/LinkedList.cpp
        #        assignments/1_linked_list/LinkedList.h
        #        assignments/1_linked_list/main.cpp
        #        assignments/2_next_greater_element/main.cpp
        #        dr_haaidi/lectures/2_class/TimeClass/Time.cpp
        #        dr_haaidi/lectures/2_class/TimeClass/Time.h
        #        dr_haaidi/lectures/2_class/TimeClass/TimeApp.cpp
        #        dr_haaidi/lectures/2_class/RationalClass/rational.cpp
        #        dr_haaidi/lectures/2_class/RationalClass/rational.h
        #        dr_haaidi/lectures/2_class/RationalClass/rationalTest.cpp
        #        dr_haaidi/lectures/2_class/SimpleString/simpleString.cpp
        #        dr_haaidi/lectures/2_class/SimpleString/simpleString.h
        #        dr_haaidi/lectures/2_class/SimpleString/simpleStringTest.cpp
        #        dr_haaidi/assignments/1_Calculator/calculator.cpp
        #        dr_haaidi/assignments/1_Calculator/calculator.h
        #        dr_haaidi/assignments/1_Calculator/Application.cpp
        #        dr_haaidi/lectures/03_Elementary_Data_Structures/main.cpp
        #        dr_haaidi/lectures/4_Elementary_Data_Structures_P2/main.cpp
        #        dr_haaidi/assignments/2_Circular_LinkedList/main.cpp
        dr_haaidi/lectures/05_LinkedList/list.cpp
        dr_haaidi/lectures/05_LinkedList/list.h
        dr_haaidi/lectures/05_LinkedList/main.cpp
)
