cmake_minimum_required(VERSION 3.29)
project(CS505)

set(CMAKE_CXX_STANDARD 20)

add_executable(CS505
        #        current/lectures/1_Pointers/example1.cpp
        #        current/lectures/1_Pointers/example2.cpp
        #        current/sections/1_pointers/example3.cpp
        #        current/lectures/2_struct_class/class_pointer.cpp
        #        current/lectures/2_struct_class/template_class.cpp
        #        current/lectures/2_struct_class/calculator.cpp
        #        current/lectures/3_linked_list/List.h
        #        current/lectures/3_linked_list/List.cpp
        #        current/lectures/3_linked_list/main.cpp
        #        current/labs/2_array/student/student.cpp
        #        current/labs/2_array/student/student.h
        #        current/labs/2_array/student/main.cpp
        #        current/assignments/1_linked_list/LinkedList.cpp
        #        current/assignments/1_linked_list/LinkedList.h
        #        current/assignments/1_linked_list/main.cpp
        #        current/assignments/2_next_greater_element/main.cpp
        #        dr_haidi/lectures/2_class/TimeClass/Time.cpp
        #        dr_haidi/lectures/2_class/TimeClass/Time.h
        #        dr_haidi/lectures/2_class/TimeClass/TimeApp.cpp
        #        dr_haidi/lectures/2_class/RationalClass/rational.cpp
        #        dr_haidi/lectures/2_class/RationalClass/rational.h
        #        dr_haidi/lectures/2_class/RationalClass/rationalTest.cpp
        #        dr_haidi/lectures/2_class/SimpleString/simpleString.cpp
        #        dr_haidi/lectures/2_class/SimpleString/simpleString.h
        #        dr_haidi/lectures/2_class/SimpleString/simpleStringTest.cpp
        #        dr_haidi/assignments/1_Calculator/calculator.cpp
        #        dr_haidi/assignments/1_Calculator/calculator.h
        #        dr_haidi/assignments/1_Calculator/Application.cpp
        #        dr_haidi/lectures/03_Elementary_Data_Structures/main.cpp
        #        dr_haidi/lectures/4_Elementary_Data_Structures_P2/main.cpp
        #        dr_haidi/assignments/2_Circular_LinkedList/main.cpp
        #        dr_haidi/lectures/05_LinkedList/list.cpp
        #        dr_haidi/lectures/05_LinkedList/list.h
        #        dr_haidi/lectures/05_LinkedList/main.cpp
        #        dr_haidi/assignments/3_LinkedList/list.h
        #        dr_haidi/assignments/3_LinkedList/list.cpp
        #        dr_haidi/assignments/3_LinkedList/main.cpp
        #        dr_haidi/lectures/8_Stack/Stackt.cpp
        #        dr_haidi/lectures/8_Stack/Stackt.h
        #        dr_haidi/lectures/8_Stack/main.cpp
        #        dr_haidi/lectures/9_Linked_Stack/StackL.cpp
        #        dr_haidi/lectures/9_Linked_Stack/StackL.h
        #        dr_haidi/lectures/9_Linked_Stack/main.cpp
#        dr_haidi/lectures/10_Queue/Queue.cpp
#        dr_haidi/lectures/10_Queue/Queue.h
#        dr_haidi/lectures/10_Queue/main.cpp
        dr_haidi/lectures/10_Linked_Queue/QueueL.cpp
        dr_haidi/lectures/10_Linked_Queue/QueueL.h
        dr_haidi/lectures/10_Linked_Queue/main.cpp
)
